kernely/src/main/resources/css/style.css
/**
 * Copyright 2011 Prometil SARL
 *
 * This file is part of Kernely.
 *
 * Kernely is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of
 * the License, or (at your option) any later version.
 *
 * Kernely is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public
 * License along with Kernely.
 * If not, see <http://www.gnu.org/licenses/>.
 */

/* General */
body,
html {
	height:100%;
	margin:0;
	padding:0;
	color:#000;
	font: normal 13px arial, sans-serif;
	background-image:url("/images/background.png");
}

/* Containers */

#main_title{
	height:auto;
	font-size:20px;
	color:#97ad17;
	font-weight:bold;
}

.subtitle{
	height:auto;
	font-size:13px;
	color:#97ad17;
	font-weight:bold;
	margin: 5px 0 5px 0;
}

#main{
	width:1245px;
	height:auto;
	min-height:200px;
	margin-top:50px;
	margin-left:auto;
	margin-right:auto;
}

#container_right {
	width:220px;
	margin-left:13px;
	z-index:5;
}

#container_left {
	width:238px;
	border-right:0px;
	z-index:5;
}

#container_central {
	width:676px;
	padding:20px 45px 20px 45px;
	height:100%;
	z-index:5;
}

.container_generic{
	position:relative;
	border:1px solid #a0a2a3;
	background-color:#f6f6f6;
	float:left;	
	height:auto;
	min-height:20px;
	margin:0 auto;
	margin: 0 auto 0 auto;
}

h1 {
	font: 18px arial, sans-serif;
	color: #333;
	max-width: 100%;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

.button-bar{
	padding-top:10px;	
}

#container_footer{
	position:relative;
	width:100%;
	margin-top:70px;
	height:auto;
	border-top:1px solid #a0a2a3;
	z-index:1;
}

.k_footer{
	position:absolute;
	margin-top:-151px;
	z-index:0;
}

/* header (logo, menu and profile)*/
div#header div#title {
	display: block;
	color: #FFF;
	font-size: 10px;
	float: left;
}

div#header {
	background: #2D2D2D;
	font: 13px/ 27px Arial, sans-serif;
	height: 50px;
	min-width:1245px;
	background-image:url("/images/menu_background.png");
	background-repeat:repeat-x;
	-moz-box-shadow: 0px 7px 10px #acacac;
	-webkit-box-shadow: 0px 7px 10px #acacac;
	box-shadow: 0px 7px 10px #acacac;
}

div#title{
	width:124px;
	height:50px;
	background-image:url("/images/logo_menu_black.png");
	background-repeat:no-repeat;
	margin-left:50px;
}

div#header a {
	color: #FFF;
	text-decoration: none;
}

/* menu*/
div#menu {
	left:0;
	height: 50px;
	min-width:1245px;
    position: absolute;
    top: 0;
}

a.menu_item, a.menu_item_selected{
	height:40px;
	width:95px;
	text-align:center;
	float:left;
	color:#FFF;
	padding-top:10px;
	cursor:pointer;
}

a.menu_item:hover{
	background-color:#000;
}

a.menu_item_selected{
	background-color:#000;
}

/* header profile */
div#menu_header_profile {
	height: 50px;
   	position: relative;
	float:right; 
   	color:#FFF;
   	font-size:10px;
}

div#username_menu{
	width:110px;
	height:50px;
	float:left;
	text-align:center;
	padding-top:10px;
}

div#profile_button{
	background-image:url("/images/profile_icon.png");
	width:24px;
	height:50px;
	float:left;
}

div#settings_button{
	background-image:url("/images/settings_icon.png");
	width:26px;
	height:50px;
	margin-right:30px;
	margin-left:13px;
	float:left;
}

img.img_miniprofile{
	width:28px;
	height:28px;
}

/* mini-profile pop up */
div#profile_popup{
	right:5px;
	position:absolute;
	top:49px;
	width:310px;
	height:126px;
	background-color:#FFFFFF;
	display:none;
}

div#profilePU-content{
	border:1px solid black;
	padding:5px;
}

div#profilePU-main{
	height:80px;
}

div#profilePU-image{
	height:80px;
	width:125px;
	float:left;
}

img#profilePU-img{
	max-width:120px;
	max-height:80px;
}

div#profilePU-information{
	height:80px;
	width:173px;
	float:left;
}

div#profilePU-footer{
	height:30px;
	text-align:center;
}

/*Profile left image*/
#left_profile_container{
	width:238px;
	height:238px;
	background-color:#3e3d40;
	z-index:5;
	color:#FFFFFF;
	text-align:center;
	font-weight:bold;
}

#profile_mask{
	position:absolute;
	width:238px;
	height:197px;
	background-image:url("/images/profile_mask.png");
}

#image_left_profile{
	width:238px;
	height:197px;
}

#left_profile_name{
	width:238px;
	height:30px;
	padding-top:10px;
}

#left_profile_arrow{
	position:absolute;
	z-index:9999;
	margin-left:238px;
	height:238px;
	width:11px;
	background-image:url("/images/left_profile_arrow.png");
}

/* content */
div#content {
	padding: 10px;
}

div#content h1 {
	font: 18px arial, sans-serif;
}

div.button-bar {
	text-align: right;
}

/*************************************************************/
/*	General style for component	                     */
/*************************************************************/

/* Buttons style */
.button, .button_ok, .button_standard, .button_emphasis {
	min-width:70px;
	width:auto;
	height:28px;
	cursor:pointer;
	font-weight:bold;
}

.button_ok{
	background-color:#97ad17;
	color:#efebe3;
	border: 1px solid #90a516;
}

.button_emphasis{
	background-color:#3e3d40;
	color:#FFFFFF;
	border: 1px solid #e6e7e7;
}

.button_ok:hover{
	background-color:#879d08;
}

.button_standard{
	background-color:#eceded;
	color:#000;
	border: 1px solid #e6e7e7;
}

.button_standard:hover{
	background-color:#e3e4e4;
	color:#000;
}

/* Table style */
table.kernely_table tr:nth-child(odd) {
    background-color: #F6F6F6;
}
table.kernely_table tr:nth-child(even) {
    background-color: #e3e4e4;
}

table.kernely_table{
	border-top: 1px solid #a0a2a3;
	border-left: 1px solid #a0a2a3;
	border-bottom: 1px solid #a0a2a3;
	width:100%;
	border-spacing:0px;
}

table.kernely_table tr{
	height:25px;
}

table.kernely_table tr.line_selected{
	background-color:#c9e559;
}

table.kernely_table tr.over{
	background-color:#e3f38d;
}

table.kernely_table td, table.kernely_table th{
	border-right: 1px solid #a0a2a3;
}

table.kernely_table td{
	color:#656567;
	padding-left:5px;
	padding-right:5px;
	padding-top:2px;
	padding-bottom:2px;
}

table.kernely_table th{
	background-color: #e3e4e4;
}

/* Input fields */
.kernely_input{
	border:1px solid #aeafb0;
	height:20px;
}

/* Helpers */
.clickable{
	cursor:pointer;
}

.clear{
	clear:both;
}

/* Dialogs */
.ui-widget-header{
	background:#e4e4e4;
	border: 0px;
	background: #e4e4e4;
	color: black;
	font-weight: bold;
}
#kernely-confirm-dialog{
	background-color:#f5f5f5;
}

#kernely-confirm-buttons{
	margin:20px;
	float:right;
}

.ui-dialog-title{
	text-align:center;
}

.dialog-buttons-container{
	margin-top:10px;
	margin-bottom:10px;
	float:right;
}

/* Datepickers*/
.ui-datepicker-trigger{
}

.hasDatepicker{

}


/* notifications*/
div#notification_container{
	padding-top:10px;
	padding-bottom:10px;
}
div.success-notification{
	color:#000;
	text-decoration:italic;
	background-color:#eceee0;
	font-size:12px;
	padding:10px;
	margin:10px 0px;
	font-weight: normal;
	font-style: italic;
}
div.error-notification{
	color:#000;
	text-decoration:italic;
	background-color:#eddfdf;
	font-size:12px;
	padding:10px;
	margin:10px 0px;
	font-weight: normal;
	font-style: italic;
}
div.info-notification{
	color:#000;
	text-decoration:italic;
	background-color:#e8f3f7;
	font-size:12px;
	padding:10px;
	margin:10px 0px;
	font-weight: normal;
	font-style: italic;
}

